5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4155/executions/1709_3033.log
== TEST (2019-05-02 10:28:30) 
-- CODE:
x = float(input("valor de x: "))

if(x >= -100 and x <0):
	print(round(-1/x, 4))
	elif(x > 0 and x <= 100):
		print(round(1/x, 4))
else:
	if(x > 100 or x < -100):
		print("entrada invalida")
-- ERROR:
File "XXXX", line 5
    elif(x > 0 and x <= 100):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:28:41) 
-- CODE:
x = float(input("valor de x: "))

if(x >= -100 and x <0):
	print(round(-1/x, 4))
	if(x > 0 and x <= 100):
		print(round(1/x, 4))
else:
	if(x > 100 or x < -100):
		print("entrada invalida")
-- ERROR:
File "XXXX", line 5
    elif(x > 0 and x <= 100):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:28:53) 
-- CODE:
x = float(input("valor de x: "))

if(x >= -100 and x <0):
	print(round(-1/x, 4))
	if(x > 0 and x <= 100):
		print(round(1/x, 4))
else:
	if(x > 100 or x < -100):
		print("entrada invalida")
-- ERROR:
File "XXXX", line 5
    elif(x > 0 and x <= 100):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:28:57) 
-- CODE:
x = float(input("valor de x: "))

if(x >= -100 and x <0):
	print(round(-1/x, 4))
	if(x > 0 and x <= 100):
		print(round(1/x, 4))
else:
	if(x > 100 or x < -100):
		print("entrada invalida")
-- ERROR:
File "XXXX", line 5
    elif(x > 0 and x <= 100):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:29:07) 
-- CODE:
x = float(input("valor de x: "))

if(x >= -100 and x <0):
	print(round(-1/x, 4))
	if(x > 0 and x <= 100):
		print(round(1/x, 4))
else:
	if(x > 100 or x < -100):
		print("entrada invalida")
-- ERROR:
File "XXXX", line 5
    elif(x > 0 and x <= 100):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:29:38) 
-- CODE:
x = float(input("valor de x: "))

if(x >= -100 and x <0):
	print(round(-1/x, 4))
	if(x > 0 or x <= 100):
		print(round(1/x, 4))
else:
	if(x > 100 or x < -100):
		print("entrada invalida")
-- ERROR:
File "XXXX", line 5
    elif(x > 0 and x <= 100):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:30:31) 
-- CODE:
x = float(input("valor de x: "))

if(x >= -100 and x <0):
	print(round(-1/x, 4))
	if(x > 0 and x <= 100):
		p = 1 / x
		r = round(p, 4)
		print(r)
else:
	if(x > 100 or x < -100):
		print("entrada invalida")
-- ERROR:
File "XXXX", line 5
    elif(x > 0 and x <= 100):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:31:37) 
-- CODE:
x = float(input("valor de x: "))

if(-100 <= x and x < 0):
	print(round(-1/x, 4))
	if(0 < x and x <= 100):
		p = 1 / x
		r = round(p, 4)
		print(r)
else:
	if(x > 100 or x < -100):
		print("entrada invalida")
-- ERROR:
File "XXXX", line 5
    elif(x > 0 and x <= 100):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:31:57) 
-- CODE:
x = float(input("valor de x: "))

if(-100 <= x and x < 0):
	print(round(-1/x, 4))
elif(0 < x and x <= 100):
	p = 1 / x
	r = round(p, 4)
	print(r)
else:
	if(x > 100 or x < -100):
		print("entrada invalida")
-- OUTPUT:
0.0109
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 10:32:05) 
-- CODE:
x = float(input("valor de x: "))

if(-100 <= x and x < 0):
	print(round(-1/x, 4))
elif(0 < x and x <= 100):
	p = 1 / x
	r = round(p, 4)
	print(r)
else:
	if(x > 100 or x < -100):
		print("entrada invalida")
-- EXECUTION TIME:
0.179502
-- TEST CASE 1:
---- input:
92.0
---- correct output:
0.0109
---- user output:
0.0109
-- TEST CASE 2:
---- input:
-55.25
---- correct output:
0.0181
---- user output:
0.0181
-- TEST CASE 3:
---- input:
0.025
---- correct output:
40.0
---- user output:
40.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:37:50) 
-- CODE:
x = float(input("valor de x: "))

if(-100 <= x and x < 0):
	print(round(-1/x, 4))
elif(0 < x and x <= 100):
	p = 1 / x
	r = round(p, 4)
	print(r)
else:
	if(x > 100 or x < -100):
		print("entrada invalida")
-- OUTPUT:
0.0109
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:37:54) 
-- CODE:
x = float(input("valor de x: "))

if(-100 <= x and x < 0):
	print(round(-1/x, 4))
elif(0 < x and x <= 100):
	p = 1 / x
	r = round(p, 4)
	print(r)
else:
	if(x > 100 or x < -100):
		print("entrada invalida")
-- OUTPUT:
0.0109
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:38:01) 
-- CODE:
x = float(input("valor de x: "))

if(-100 <= x and x < 0):
	print(round(-1/x, 4))
elif(0 < x and x <= 100):
	p = 1 / x
	r = round(p, 4)
	print(r)
else:
	if(x > 100 or x < -100):
		print("entrada invalida")
-- OUTPUT:
0.0109
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:38:07) 
-- CODE:
x = float(input("valor de x: "))

if(-100 <= x and x < 0):
	print(round(-1/x, 4))
elif(0 < x and x <= 100):
	p = 1 / x
	r = round(p, 4)
	print(r)
else:
	if(x > 100 or x < -100):
		print("entrada invalida")
-- OUTPUT:
0.0109
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:38:11) 
-- CODE:
x = float(input("valor de x: "))

if(-100 <= x and x < 0):
	print(round(-1/x, 4))
elif(0 < x and x <= 100):
	p = 1 / x
	r = round(p, 4)
	print(r)
else:
	if(x > 100 or x < -100):
		print("entrada invalida")
-- OUTPUT:
0.0109
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:38:18) 
-- CODE:
x = float(input("valor de x: "))

if(-100 <= x and x < 0):
	print(round(-1/x, 4))
elif(0 < x and x <= 100):
	p = 1 / x
	r = round(p, 4)
	print(r)
else:
	if(x > 100 or x < -100):
		print("entrada invalida")
-- OUTPUT:
0.0109
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:38:41) 
-- CODE:
x = float(input("valor de x: "))

if(-100 <= x and x < 0):
	print(round(-1/x, 4))
elif(0 < x and x <= 100):
	p = 1 / x
	r = round(p, 4)
	print(r)
else:
	if(x > 100 or x < -100):
		print("entrada invalida")
-- OUTPUT:
0.0109
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:39:00) 
-- CODE:
x = float(input("valor de x: "))

if(-100 <= x and x < 0):
	print(round(-1/x, 4))
elif(0 < x and x <= 100):
	p = 1 / x
	r = round(p, 4)
	print(r)
else:
	if(x > 100 or x < -100 or):
		print("entrada invalida")
-- ERROR:
File "XXXX", line 10
    if(x > 100 or x < -100 or):
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 10:39:11) 
-- CODE:
x = float(input("valor de x: "))

if(-100 <= x and x < 0):
	print(round(-1/x, 4))
elif(0 < x and x <= 100):
	p = 1 / x
	r = round(p, 4)
	print(r)
else:
	if(x > 100 or x < -100 or x == 0):
		print("entrada invalida")
-- EXECUTION TIME:
0.246155
-- TEST CASE 1:
---- input:
92.0
---- correct output:
0.0109
---- user output:
0.0109
-- TEST CASE 2:
---- input:
-55.25
---- correct output:
0.0181
---- user output:
0.0181
-- TEST CASE 3:
---- input:
0.025
---- correct output:
40.0
---- user output:
40.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:39:13) 
-- CODE:
x = float(input("valor de x: "))

if(-100 <= x and x < 0):
	print(round(-1/x, 4))
elif(0 < x and x <= 100):
	p = 1 / x
	r = round(p, 4)
	print(r)
else:
	if(x > 100 or x < -100 or x == 0):
		print("entrada invalida")
-- OUTPUT:
0.0109
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:39:17) 
-- CODE:
x = float(input("valor de x: "))

if(-100 <= x and x < 0):
	print(round(-1/x, 4))
elif(0 < x and x <= 100):
	p = 1 / x
	r = round(p, 4)
	print(r)
else:
	if(x > 100 or x < -100 or x == 0):
		print("entrada invalida")
-- OUTPUT:
0.0109
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:39:21) 
-- CODE:
x = float(input("valor de x: "))

if(-100 <= x and x < 0):
	print(round(-1/x, 4))
elif(0 < x and x <= 100):
	p = 1 / x
	r = round(p, 4)
	print(r)
else:
	if(x > 100 or x < -100 or x == 0):
		print("entrada invalida")
-- OUTPUT:
0.0109
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
